// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Space should render correct with children 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
  style="flex-wrap:wrap;margin-bottom:-8px"
>
  <div
    class="ant-space-item"
    style="margin-right:8px;padding-bottom:8px"
  >
    text1
  </div>
  <div
    class="ant-space-item"
    style="margin-right:8px;padding-bottom:8px"
  >
    <span>
      text1
    </span>
  </div>
  <div
    class="ant-space-item"
    style="padding-bottom:8px"
  >
    text3
  </div>
</div>
`;

exports[`Space should render width ConfigProvider 1`] = `
Array [
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap:wrap;margin-bottom:-24px"
  >
    <div
      class="ant-space-item"
      style="margin-right:24px;padding-bottom:24px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom:24px"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap:wrap;margin-bottom:-16px"
  >
    <div
      class="ant-space-item"
      style="margin-right:16px;padding-bottom:16px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom:16px"
    >
      <span>
        2
      </span>
    </div>
  </div>,
  <div
    class="ant-space ant-space-horizontal ant-space-align-center"
    style="flex-wrap:wrap;margin-bottom:-24px"
  >
    <div
      class="ant-space-item"
      style="margin-right:24px;padding-bottom:24px"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="ant-space-item"
      style="padding-bottom:24px"
    >
      <span>
        2
      </span>
    </div>
  </div>,
]
`;

exports[`Space split 1`] = `
<div
  class="ant-space ant-space-horizontal ant-space-align-center"
  style="flex-wrap:wrap;margin-bottom:-8px"
>
  <div
    class="ant-space-item"
    style="margin-right:4px;padding-bottom:8px"
  >
    text1
  </div>
  <span
    class="ant-space-item-split"
    style="margin-right:4px;padding-bottom:8px"
  >
    -
  </span>
  <div
    class="ant-space-item"
    style="margin-right:4px;padding-bottom:8px"
  >
    <span>
      text1
    </span>
  </div>
  <span
    class="ant-space-item-split"
    style="margin-right:4px;padding-bottom:8px"
  >
    -
  </span>
  <div
    class="ant-space-item"
    style="padding-bottom:8px"
  >
    text3
  </div>
</div>
`;
